# hinded

./: README.md  manage.py  pyproject.toml
hinded/: asgi.py  settings.py  urls.py  wsgi.py
hinded/apps/hinded/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
hinded/apps/hinded/migrations/: 0001_initial.py  0002_hinded_nimi.py  0003_alter_hinded_kirjeldus_alter_isikuhinne_markmed.py  0004_isik_kood.py  0005_alter_isik_kood.py
templates/: base.html
templates/hinded/: add_cell.html  add_single_hinne.html  create_hinne.html  create_isik.html  delete_hinne_confirm.html  delete_isik_confirmation.html  edit_hinne.html  edit_isik.html  edit_single_hinne.html  hinne_cell.html  home.html  isiku_hinded.html  mass_add_hinded.html  request_hinded.html
templates/registration/: login.html
